ydb/library/yql/tests/postgresql/cases/insert.err
<sql-statement>
--
-- insert with DEFAULT in the target_list
--
create table inserttest (col1 int4, col2 int4 NOT NULL, col3 text default 'testing');
</sql-statement>
<sql-statement>
insert into inserttest (col1, col2, col3) values (DEFAULT, DEFAULT, DEFAULT);
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: alternative is not implemented yet : 148
    	insert into inserttest (col1, col2, col3) values (DEFAULT, DEFAULT, DEFAULT);
	^
<sql-statement>
insert into inserttest (col2, col3) values (3, DEFAULT);
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: alternative is not implemented yet : 148
    	insert into inserttest (col2, col3) values (3, DEFAULT);
	^
<sql-statement>
insert into inserttest (col1, col2, col3) values (DEFAULT, 5, DEFAULT);
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: alternative is not implemented yet : 148
    	insert into inserttest (col1, col2, col3) values (DEFAULT, 5, DEFAULT);
	^
<sql-statement>
insert into inserttest values (DEFAULT, 5, 'test');
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: alternative is not implemented yet : 148
    	insert into inserttest values (DEFAULT, 5, 'test');
	^
<sql-statement>
insert into inserttest values (DEFAULT, 7);
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: alternative is not implemented yet : 148
    	insert into inserttest values (DEFAULT, 7);
	^
<sql-statement>
select * from inserttest;
</sql-statement>
<sql-statement>
--
-- insert with similar expression / target_list values (all fail)
--
insert into inserttest (col1, col2, col3) values (DEFAULT, DEFAULT);
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: alternative is not implemented yet : 148
    	--
	^
<sql-statement>
insert into inserttest (col1, col2, col3) values (1, 2);
</sql-statement>
-stdin-:<main>: Error: Type annotation

    -stdin-:<main>:1:1: Error: At function: RemovePrefixMembers, At function: PgSelect, At function: PgSetItem
    	insert into inserttest (col1, col2, col3) values (1, 2);
	^
        -stdin-:<main>:1:1: Error: values and target_columns sizes do not match
        	insert into inserttest (col1, col2, col3) values (1, 2);
	^
<sql-statement>
insert into inserttest (col1) values (1, 2);
</sql-statement>
-stdin-:<main>: Error: Type annotation

    -stdin-:<main>:1:1: Error: At function: RemovePrefixMembers, At function: PgSelect, At function: PgSetItem
    	insert into inserttest (col1) values (1, 2);
	^
        -stdin-:<main>:1:1: Error: values and target_columns sizes do not match
        	insert into inserttest (col1) values (1, 2);
	^
<sql-statement>
insert into inserttest (col1) values (DEFAULT, DEFAULT);
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: alternative is not implemented yet : 148
    	insert into inserttest (col1) values (DEFAULT, DEFAULT);
	^
<sql-statement>
select * from inserttest;
</sql-statement>
<sql-statement>
--
-- VALUES test
--
insert into inserttest values(10, 20, '40'), (-1, 2, DEFAULT),
    ((select 2), (select i from (values(3)) as foo (i)), 'values are fun!');
</sql-statement>
-stdin-:<main>: Error: Parse Sql

    -stdin-:<main>:1:1: Error: alternative is not implemented yet : 148
    	--
	^
<sql-statement>
select * from inserttest;
</sql-statement>
<sql-statement>
--
-- TOASTed value test
--
insert into inserttest values(30, 50, repeat('x', 10000));
</sql-statement>
<sql-statement>
select col1, col2, char_length(col3) from inserttest;
</sql-statement>
BackTrace(void**, unsigned long)+29 (0x14033ECD)
TBackTrace::Capture()+30 (0x1403443E)
TWithBackTrace<yexception>::TWithBackTrace<>()+72 (0x13FD0568)
NYT::TNode::TTypeError::TTypeError()+25 (0x144DC3E9)
NYT::TNode::CheckType(NYT::TNode::EType) const+267 (0x144DD9BB)
NYT::TNode::AsString() const+30 (0x144DC53E)
WriteTableToStream(IOutputStream&, TVector<NYT::TNode, std::__y1::allocator<NYT::TNode> > const&, TVector<NYT::TNode, std::__y1::allocator<NYT::TNode> > const&)+830 (0x13EBBB7E)
Main(int, char**)+5748 (0x13EC0FB4)
main+273 (0x13EC2761)
??+0 (0x7F6115629D90)
__libc_start_main+128 (0x7F6115629E40)
??+0 (0x13E4C029)

(NYT::TNode::TTypeError) library/cpp/yson/node/node.cpp:829: TNode type string_node expected, actual type null
